--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ClubLaRibera_App" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ClubLaRibera_App_v2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/gray_500</item>
         <item name="colorPrimaryVariant">@color/gray_700</item>
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.ClubLaRibera_App.NoActionBar">
+    <style name="Theme.ClubLaRibera_App_v2.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -31,7 +31,7 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="Theme.ClubLaRibera_App.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.ClubLaRibera_App_v2.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.ClubLaRibera_App.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.ClubLaRibera_App_v2.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
